# wxDragon

./: .gitignore  CHANGELOG  Cargo.toml  README.md
.cargo/: config.toml
.cursor/rules/: builder-pattern.mdc  cpp-integer-types.mdc  guideline.mdc  prefer_enums_for_styles.mdc  widget-development-or-modification-guide.mdc
.github/workflows/: rust.yml  wxwidgets-build.yml
examples/cpp/minimal_cpp/: CMakeLists.txt  Info.plist  Makefile  main.cpp  taskbar.cpp  test_panel.xrc
examples/rust/clipboard_test/: Cargo.toml
examples/rust/custom_dataview_renderer/: Cargo.toml
examples/rust/custom_widget/: Cargo.toml  README.md
examples/rust/dark_mode_demo/: Cargo.toml
examples/rust/dataview_demo/: Cargo.toml
examples/rust/gallery/: Cargo.toml  build.rs
examples/rust/gallery/src/: main.rs
examples/rust/gallery/src/tabs/: advanced_tab.rs  aui_tab.rs  basic_tab.rs  book_controls_tab.rs  color_tab.rs  data_tab.rs  dataview_tree_tab.rs  dataview_virtual_tab.rs  dialog_tab.rs  lists_tab.rs  media_tab.rs  mod.rs  richtext_tab.rs  treectrl_tab.rs
examples/rust/minimal_rust/: Cargo.toml
examples/rust/minimal_rust/src/: main.rs
rust/wxdragon/: Cargo.toml  README.md
rust/wxdragon-macros/: Cargo.toml
rust/wxdragon-macros/src/: lib.rs
rust/wxdragon-sys/: .gitignore  Cargo.toml  README.md  build.rs
rust/wxdragon-sys/cpp/: CMakeLists.txt
rust/wxdragon-sys/cpp/include/: array_string.h  wxd_msvc_workarounds.h  wxd_types.h  wxdragon.h
rust/wxdragon-sys/cpp/include/core/: wxd_app.h  wxd_appprogress.h  wxd_clipboard.h  wxd_cursor.h  wxd_dataobject.h  wxd_item.h  wxd_timer.h  wxd_window_base.h  wxd_xrc.h
rust/wxdragon-sys/cpp/include/dialogs/: wxd_dialogs.h
rust/wxdragon-sys/cpp/include/dnd/: wxd_dnd.h
rust/wxdragon-sys/cpp/include/events/: wxd_droptarget_api.h  wxd_event_api.h
rust/wxdragon-sys/cpp/include/graphics/: wxd_bitmapbundle.h  wxd_dc.h  wxd_dc_constants.h
rust/wxdragon-sys/cpp/include/sizers/: wxd_sizers.h
rust/wxdragon-sys/cpp/include/widgets/: wxd_activityindicator.h  wxd_adv_ui.h  wxd_animationctrl.h  wxd_artprovider.h  wxd_aui.h  wxd_bitmap.h  wxd_bitmapbutton.h  wxd_bitmapcombobox.h  wxd_button.h  wxd_calendar_ctrl.h  wxd_calendarctrl.h  wxd_checkbox.h  wxd_checklistbox.h  wxd_choice.h  wxd_choices.h  wxd_collapsiblepane.h  wxd_combobox.h  wxd_commandlinkbutton.h  wxd_containers.h  wxd_controls.h  wxd_dataview.h  wxd_dataview_ctrl.h  wxd_dataviewtreectrl.h  wxd_editablelistbox.h  wxd_file_ctrl.h  wxd_frame.h  wxd_gauge.h  wxd_genericstaticbitmap.h  wxd_hyperlinkctrl.h  wxd_imagelist.h  wxd_listbox.h  wxd_listctrl.h  wxd_mediactrl.h  wxd_menu.h  wxd_misc_widgets.h  wxd_notebook.h  wxd_panel.h  wxd_pickers.h  wxd_platform_aware_staticbitmap_handler.h  wxd_radiobox.h  (+23 more)
rust/wxdragon-sys/cpp/src/: activity_indicator.cpp  animation_ctrl.cpp  app.cpp  appprogress.cpp  array_string.cpp  art_provider.cpp  aui_manager.cpp  aui_mdi_child_frame.cpp  aui_mdi_parent_frame.cpp  aui_notebook.cpp  aui_toolbar.cpp  bitmap.cpp  bitmap_button.cpp  bitmapbundle.cpp  bitmapbutton.cpp  bitmapcombobox.cpp  button.cpp  calendar_ctrl.cpp  checkbox.cpp  checklistbox.cpp  choice.cpp  client_data.cpp  clipboard.cpp  collapsiblepane.cpp  colourdialog.cpp  colourpickerctrl.cpp  combobox.cpp  commandlinkbutton.cpp  cursor.cpp  dataobject.cpp  dataview.cpp  dataviewtreectrl.cpp  dataviewvirtuallistmodel.cpp  dataviewvirtuallistmodel_custom.cpp  datepickerctrl.cpp  datetime.cpp  dc.cpp  dialog.cpp  dir_dialog.cpp  dirpickerctrl.cpp  (+63 more)
rust/wxdragon-sys/cpp/src/core/: timer.cpp
rust/wxdragon-sys/cpp/src/widgets/: dataview_ctrl.cpp
rust/wxdragon-sys/cpp/tools/const_extractor/: CMakeLists.txt  Makefile  main.cpp
rust/wxdragon-sys/src/: lib.rs
rust/wxdragon-sys/src/generated_constants/: wx_gtk_constants.rs  wx_msw_constants.rs  wx_osx_constants.rs  wx_unknown_constants.rs
rust/wxdragon/src/: app.rs  appearance.rs  appprogress.rs  art_provider.rs  base.rs  bitmap.rs  bitmap_bundle.rs  clipboard.rs  color.rs  cursor.rs  data_object.rs  datetime.rs  defs.rs  event.rs  font.rs  font_data.rs  geometry.rs  id.rs  lib.rs  macros.rs  prelude.rs  scrollable.rs  timer.rs  types.rs  window.rs  xrc.rs
rust/wxdragon/src/dc/: auto_buffered_paint_dc.rs  client_dc.rs  memory_dc.rs  mod.rs  paint_dc.rs  screen_dc.rs  window_dc.rs
rust/wxdragon/src/dialogs/: colour_dialog.rs  dir_dialog.rs  file_dialog.rs  font_dialog.rs  message_dialog.rs  mod.rs  multi_choice_dialog.rs  progress_dialog.rs  single_choice_dialog.rs  text_entry_dialog.rs
rust/wxdragon/src/dnd/: dataobject.rs  dropsource.rs  droptarget.rs  mod.rs
rust/wxdragon/src/event/: button_events.rs  event_data.rs  macros.rs  mod.rs  notebook_events.rs  scroll_events.rs  taskbar_events.rs  text_events.rs  tree_events.rs  window_events.rs
rust/wxdragon/src/menus/: menu.rs  menubar.rs  menuitem.rs  mod.rs
rust/wxdragon/src/sizers/: base.rs  box_sizer.rs  flex_grid_sizer.rs  grid_bag_sizer.rs  grid_sizer.rs  mod.rs  staticbox_sizer.rs  wrap_sizer.rs
rust/wxdragon/src/utils/: array_string.rs  mod.rs
rust/wxdragon/src/widgets/: activity_indicator.rs  animation_ctrl.rs  aui_manager.rs  aui_mdi_child_frame.rs  aui_mdi_parent_frame.rs  aui_notebook.rs  aui_toolbar.rs  bitmap_button.rs  bitmap_combobox.rs  bitmapbutton.rs  bitmapcombobox.rs  button.rs  calendar_ctrl.rs  checkbox.rs  checklistbox.rs  choice.rs  collapsible_pane.rs  colour_picker_ctrl.rs  colourpickerctrl.rs  combobox.rs  command_link_button.rs  date_picker_ctrl.rs  datepickerctrl.rs  dir_picker_ctrl.rs  editable_listbox.rs  editablelistbox.rs  file_ctrl.rs  file_picker_ctrl.rs  font_picker_ctrl.rs  frame.rs  gauge.rs  generic_static_bitmap.rs  hyperlink_ctrl.rs  imagelist.rs  item_data.rs  list_ctrl.rs  listbox.rs  media_ctrl.rs  mod.rs  notebook.rs  (+32 more)
rust/wxdragon/src/widgets/dataview/: column.rs  ctrl.rs  enums.rs  events.rs  item.rs  list_ctrl.rs  mod.rs  model.rs  renderer.rs  tree_ctrl.rs  variant.rs
rust/wxdragon/src/widgets/virtual_list/: adaptive_pool.rs  config.rs  error.rs  item_context.rs  mod.rs  widget.rs
src/tabs/: lists_tab.rs
(+47 files in other folders)
