[workspace]
members = [
    "rust/wxdragon-sys",
    "rust/wxdragon",
    "examples/rust/gallery",
    "examples/rust/simple"
    # Add other examples if they are separate crates
]

resolver = "2" # Keep resolver = "2"

[workspace.package]
authors = ["Allen Dang <allengnr@gmail.com>"] #
version = "0.1.0" # This will be the default version for workspace members
edition = "2021"
license = "MIT OR Apache-2.0" # Or your chosen license (e.g., "MIT")
repository = "https://github.com/AllenDang/wxDragon"
description = "Cross-platform GUI development with wxWidgets and Rust."
keywords = ["gui", "wxwidgets", "ui", "cross-platform"]
categories = ["gui", "external-ffi-bindings"]
readme = "README.md" # Consider adding if you have a good workspace-level README

[workspace.dependencies]
# Common dependencies for wxdragon and examples could go here if needed,
# but for now, wxdragon itself will be a primary dependency for examples.
# wxdragon = { version = "0.1.0", path = "./rust/wxdragon" } # Examples will use this. 