[package]
name = "wxdragon-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Procedural macros for wxDragon"
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
quick-xml = "0.31" 