[package]
name = "wxdragon-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Procedural macros for wxDragon"
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quick-xml = "0.38"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
