[package]
name = "wxdragon-sys"
# Inherit from workspace or specify explicitly
version.workspace = true 
edition.workspace = true
authors.workspace = true
description = "Raw FFI bindings to libwxdragon (which statically links wxWidgets)."
license.workspace = true
repository.workspace = true
readme = "README.md" # Ensure this file exists
keywords = ["ffi", "wxwidgets", "gui", "native", "bindings"]
categories = ["external-ffi-bindings", "gui", "development-tools::ffi"]
build = "build.rs"
links = "wxdragon" # Crucial: Signals to Cargo this crate builds/links libwxdragon

[features]
default = []
aui = []
media-ctrl = []
webview = []
stc = []
xrc = []
richtext = []

[dependencies]
# Sys crates typically have no runtime Rust dependencies

[build-dependencies]
bindgen = "0.72"    # For generating Rust bindings from C/C++ headers
flate2 = "1.0"      # For decompressing .gz archives (used by pre-built libraries)
pkg-config = "0.3"  # For finding libgtk and its dependencies (Linux only)
reqwest = { version = "0.12", features = ["blocking"] } # For downloading pre-built libraries
tar = "0.4"         # For extracting .tar archives
