[package]
name = "wxdragon"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"] # TODO: Replace with actual author info
description = "Safe Rust bindings for wxWidgets via the wxDragon C wrapper"
license = "MIT OR Apache-2.0" # Choose appropriate license(s)
repository = "https://github.com/your/repository" # TODO: Replace with actual repo URL
readme = "README.md"

[dependencies]
wxdragon-sys = { path = "../wxdragon-sys" }
# Add other dependencies as needed (e.g., for advanced event handling)
lazy_static = "1.4.0" 