[package]
name = "wxdragon"
version.workspace = true
edition.workspace = true # Technically, edition is often set directly or defaults, but workspace can define it.
authors.workspace = true
description = "Safe Rust bindings for wxWidgets via the wxDragon C wrapper"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["wxwidgets", "gui", "ui", "cross-platform", "bindings"]
categories = ["gui", "api-bindings"] # Already good

[dependencies]
wxdragon-sys = "0.1.0"
# Add other dependencies as needed (e.g., for advanced event handling)
lazy_static = "1.4.0" 