[package]
name = "gallery"
version = "0.1.0"
edition = "2021"

[features]
default = ["aui", "richtext", "media-ctrl", "stc"]
aui = ["wxdragon/aui"]
richtext = ["wxdragon/richtext"]
media-ctrl = ["wxdragon/media-ctrl"]
stc = ["wxdragon/stc"]

[dependencies]
image = { version = "0.25.1", default-features = false, features = [
    "png",
    "gif",
] }
# Depend on the safe wrapper crate now
wxdragon = { path = "../../../rust/wxdragon" }

[build-dependencies]
embed-manifest = "1.4"
