[package]
name = "gallery"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25.1", default-features = false, features = [
  "png",
  "gif",
] }
# Depend on the safe wrapper crate now
wxdragon = { path = "../../../rust/wxdragon", features = ["aui", "richtext"] }

[build-dependencies]
embed-manifest = "1.4"
which = "8"

[package.metadata.bundle]
# Install cargo-bundle: cargo install cargo-bundle
# macOS Usage: cargo bundle --package gallery --format osx --target x86_64-apple-darwin
name = "gallery"
identifier = "com.github.AllenDang.wxDragon.gallery"
icon = ["asset/simple.png"]
category = "Utility"
short_description = "A gallery application for wxDragon"
long_description = """
A gallery application for wxDragon that showcases the capabilities of the wxDragon framework.
It allows users to view images in various formats, demonstrating the integration of the wxDragon framework with
the Rust programming language.
"""
